# Sanitizr

./: .gitignore  Cargo.toml  README.md
docs/: PLAN.md
src-derive/: Cargo.toml
src-derive/src/: lib.rs
src-lib/: Cargo.toml
src-lib/src/: lib.rs  structures.rs  validator.rs
src-lib/src/types/: collection.rs  mod.rs  number.rs  string.rs
