[package]
name = "sanitizr"
version = "0.1.0"
edition = "2021"
authors = ["James David Clarke <james@jamesdavidclarke.com>"]
repository = "https://github.com/JamesClarke7283/Sanitizr.git"
license = "LGPL-3.0-or-later"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
perf = "warn"
style = "warn"
complexity = "warn"
suspicious = "warn"
correctness = "warn"
cargo = "warn"