[package]
name = "sanitizr"
version = "0.1.0"
edition = "2021"
authors = ["James David Clarke <james@jamesdavidclarke.com>"]
repository = "https://github.com/JamesClarke7283/Sanitizr.git"
license = "LGPL-3.0-or-later"

[dependencies]
sanitizr_derive = { path = "../src-derive" }
regex = "1.10.5"

[lints]
workspace = true
